# python_web_hw4

./: Dockerfile  README.md  main.py  pyproject.toml
storage/: data.json
